<resources>
    <string name="app_name">RAPapp</string>
    <string name="SignInTitle">Sign In</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="LogIn">Log In</string>
    <string name="Register">Register</string>
    <string name="PersonalInfo">Personal Information</string>
    <string name="History">History</string>
    <string name="StartTraining">Start Training</string>
    <string name="LogOut">Log Out</string>
    <string name="Username">Username</string>
    <string name="Height">Height/m</string>
    <string name="Weight">Weight/kg</string>
    <string name="Name">Name</string>
    <string name="Age">Age</string>
    <string name="Gender">Gender</string>
    <string name="Confirm">Confirm</string>
    <string name="Cancel">Cancel</string>
    <string name="Graphs">Graphs</string>
    <string name="Summary">Summary of Last Training</string>
    <string name="BestTraining">Best Training</string>
    <string name="LastTraining">Last Training</string>
    <string name="MainScreen">Back</string>
    <string name="title_activity_login">Sign in</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
