<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home__screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.adinavm.rapapp.Home_Screen"
    android:background="@android:color/holo_green_light">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/black"
        android:textSize="50dp"
        android:id="@+id/textView4" />

    <Button
        android:text="@string/PersonalInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="20dp"
        android:id="@+id/button4"
        android:onClick="onClickPersonalInfo"/>

    <Button
        android:text="@string/LogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/button6"
        android:onClick="onClickLogOut" />

    <Button
        android:text="@string/History"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:layout_below="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:layout_marginTop="14dp"
        android:layout_alignEnd="@+id/button6"
        android:onClick="onClickHistory"/>

                <Button
                    android:text="@string/BestTraining"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/button5"
                    android:layout_alignStart="@+id/button10"
                    android:id="@+id/button11"
                    android:onClick="onClickBestTraining"/>

                <Button
                    android:text="@string/Graphs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button9"
                    android:layout_alignTop="@+id/button3"
                    android:layout_alignStart="@+id/button10"
                    android:layout_marginTop="46dp"
                    android:onClick="onClickGraphs"/>

                <Button
                    android:text="@string/Summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button10"
                    android:layout_marginEnd="49dp"
                    android:layout_below="@+id/button9"
                    android:layout_alignParentEnd="true"
                    android:onClick="onClickLastTraining"/>

    <Button
        android:text="@string/StartTraining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button5"
        android:layout_marginBottom="42dp"
        android:layout_above="@+id/button6"
        android:layout_alignEnd="@+id/button6"
        android:layout_alignStart="@+id/button3"
        android:onClick="onClickStartTraining"/>

</RelativeLayout>
