<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/activity_start__training"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.adinavm.rapapp.Start_Training"
    android:background="#FFFF00">
     
    <TextView
        android:text="@string/StartTraining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textSize="50dp"
        android:id="@+id/textView14" />

    <Button
        android:text="@string/MainScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/button12"
        android:onClick="onClickBack"/>

    <Button
        android:text="@string/start_recording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        android:textSize="25dp"
        android:id="@+id/button13"
        android:layout_above="@+id/button12"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        tools:background="@android:color/holo_orange_dark" />
     
</RelativeLayout>